--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,18 @@ dependencies:
   email_validator: ^2.1.17
   intl_phone_field: ^3.2.0
   pinput: ^2.2.16
-  firebase_auth: ^4.6.3
+  firebase_auth: ^5.3.1
   provider: ^6.0.5
-  firebase_core: ^2.14.0
-  cloud_firestore: ^4.11.0
+  firebase_core: ^3.6.0
+  firebase_database: ^11.1.4
+  smooth_page_indicator: ^1.2.0+3
+  snapkit_flutter: ^0.0.1
+  country_code_picker: ^2.0.1
+  intl_phone_number_input: ^0.7.0+2
+  deepar_flutter: ^0.0.5
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -45,6 +53,17 @@ flutter_launcher_icons:
 flutter:
   uses-material-design: true
   assets:
+    - lib/assets/images/google.png
     - lib/assets/logo/logo.png
     - lib/assets/
     - lib/assets/images/hero_banner.png
+    - assets/filters/
+    - assets/previews/
+    - lib/assets/images/oval_men.png
+    - lib/assets/images/round_men.png
+    - lib/assets/images/square_men.png
+    - lib/assets/images/heart_men.png
+    - lib/assets/images/wavy_men.png
+    - lib/assets/images/straight_men.png
+    - lib/assets/images/curly_men.png
+    - lib/assets/images/coily_men.png
